manifest/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: app-policies
spec:
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 8080
