manifest/disable-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress
  namespace: app-policies
spec:
  podSelector: {}
  policyTypes:
  - Ingress
